manifests/result-webdav/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-webdav
  namespace: ems1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-webdav
  template:
    metadata:
      labels:
        app: result-webdav
    spec:
      nodeSelector:
        compass-ci.io/node-role: master
      containers:
      - name: result-webdav
        image: result-webdav:latest
        imagePullPolicy: IfNotPresent
        command: ['bash', '/usr/local/bin/openresty.sh']
        ports:
        - containerPort: 3080
        livenessProbe:
          tcpSocket:
            port: 3080
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            memory: 15Gi
          requests:
            memory: 10Mi
        securityContext:
          runAsUser: 1090
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: nginx-conf
          mountPath: /usr/local/openresty/nginx/conf
          readOnly: true
        - name: home-lkp
          mountPath: /home/lkp
        - name: signatrust
          mountPath: /etc/gpg-key
        - name: result
          mountPath: /srv/result
        - name: initrd
          mountPath: /srv/initrd
        - name: kernel
          mountPath: /srv/kernel
        - name: rpm
          mountPath: /srv/rpm
        - name: tmp-rpm
          mountPath: /srv/tmp/rpm
        - name: build-config
          mountPath: /srv/cci/build-config
        - name: profile-data
          mountPath: /srv/cci/profile/data
        - name: kunpeng
          mountPath: /srv/kunpeng
        - name: repositories 
          mountPath: /srv/repositories
        - name: localtime
          mountPath: /etc/localtime
          subPath: localtime
        - name: gpg-key
          mountPath: /gpg-key
        - name: log
          mountPath: /srv/log
        - name: tmp-result-webdav
          mountPath: /tmp
      volumes:
      - name: localtime
        configMap:
          name: localtime
      - name: result-webdav-conf
        configMap:
          name: result-webdav-conf
      - name: gpg-key
        secret:
          secretName: gpg-key
      - name: tmp-result-webdav
        emptyDir: {}
      - name: nginx-conf
        emptyDir: {}
      - name: home-lkp
        emptyDir: {}
      - name: tmp-rpm
        emptyDir: {}
      - name: signatrust
        hostPath:
          path: /etc/gpg-key
      - name: result
        hostPath:
          path: /srv/result
      - name: initrd
        hostPath:
          path: /srv/initrd
      - name: kernel
        hostPath:
          path: /srv/kernel
      - name: rpm
        hostPath:
          path: /srv/rpm
      - name: build-config
        hostPath:
          path: /srv/cci/build-config
      - name: profile-data
        hostPath:
          path: /srv/cci/profile/data
      - name: kunpeng
        hostPath:
          path: /srv/kunpeng
      - name: repositories
        hostPath:
          path: /srv/repositories
      - name: log
        hostPath:
          path: /srv/log/result-webdav
