manifests/result-webdav/charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-webdav-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /result/
            pathType: Prefix
            backend:
              service:
                name: result-webdav
                port:
                  number: 80
